[gd_scene load_steps=6 format=2]

[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Buttons/Menu_Button_Template.gd" type="Script" id=2]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Buttons/Focus.tres" type="Animation" id=4]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=5]

[node name="Menu_Button_Template" type="ColorRect"]
margin_right = 439.0
margin_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 618.097
margin_top = 4.20471
margin_right = 618.097
margin_bottom = 4.20471
text = " Save Complete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="AnimationPlayer" parent="."]
anims/Focused = ExtResource( 4 )
anims/Menu_Button_Animation = ExtResource( 4 )
[connection signal="button_up" from="Button" to="." method="_on_TextureRect_button_up"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
